<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ViewResultsActivity">

    <Button
        android:id="@+id/ViewResultActivity_Button_sortSubjectLiterature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/literature"
        android:textSize="@dimen/sort_size"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/ViewResultActivity_Button_sortSubjectGeography"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ViewResultActivity_Button_sortSubjectGeography"
        app:layout_constraintTop_toTopOf="@+id/ViewResultActivity_Button_sortSubjectGeography" />

    <Button
        android:id="@+id/ViewResultActivity_Button_sortDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textSize="@dimen/sort_size"
        app:backgroundTint="@color/faded_green"
        app:layout_constraintStart_toEndOf="@+id/Fixed_ViewResultActivity_TextView_sort"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ViewResultActivity_Button_sortSubjectMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math"
        android:textSize="@dimen/sort_size"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/ViewResultActivity_Button_sortDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ViewResultActivity_Button_sortDate"
        app:layout_constraintTop_toBottomOf="@+id/ViewResultActivity_Button_sortDate" />

    <Button
        android:id="@+id/ViewResultActivity_Button_sortSubjectGeography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geography"
        android:textSize="@dimen/sort_size"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/ViewResultActivity_Button_sortSubjectMath"
        app:layout_constraintEnd_toStartOf="@+id/ViewResultActivity_Button_sortSubjectLiterature"
        app:layout_constraintStart_toEndOf="@+id/ViewResultActivity_Button_sortSubjectMath"
        app:layout_constraintTop_toBottomOf="@+id/ViewResultActivity_Button_sortDate" />

    <TextView
        android:id="@+id/Fixed_ViewResultActivity_TextView_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="@dimen/default_size"
        app:layout_constraintBottom_toBottomOf="@+id/ViewResultActivity_Button_sortSubjectMath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ViewResultActivity_Button_sortDate" />

    <TextView
        android:id="@+id/Fixed_ViewResultActivity_TextView_totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_total_score"
        android:textColor="@color/black"
        android:textSize="@dimen/default_size"
        app:layout_constraintStart_toStartOf="@+id/Fixed_ViewResultActivity_TextView_sort"
        app:layout_constraintTop_toBottomOf="@+id/ViewResultActivity_Button_sortSubjectMath" />

    <TextView
        android:id="@+id/ViewResultActivity_TextView_totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/default_size"
        app:layout_constraintBottom_toBottomOf="@+id/Fixed_ViewResultActivity_TextView_totalScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Fixed_ViewResultActivity_TextView_totalScore"
        app:layout_constraintTop_toTopOf="@+id/Fixed_ViewResultActivity_TextView_totalScore" />

    <ListView
        android:id="@+id/ViewResultActivity_ListView_resultList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fixed_ViewResultActivity_TextView_totalScore" />
</androidx.constraintlayout.widget.ConstraintLayout>