<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".UserDetailsActivity">

    <TextView
        android:id="@+id/Fixed_UserDetails_TextView_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textSize="@dimen/default_size"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_Username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Fixed_UserDetails_TextView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="@dimen/default_size"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_Email"
        app:layout_constraintTop_toBottomOf="@+id/UserDetails_EditText_Username" />

    <TextView
        android:id="@+id/Fixed_UserDetails_TextView_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="@dimen/default_size"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_Password"
        app:layout_constraintTop_toBottomOf="@+id/UserDetails_EditText_Email" />

    <TextView
        android:id="@+id/Fixed_UserDetails_TextView_ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_password"
        android:textSize="@dimen/default_size"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/UserDetails_EditText_Password" />

    <EditText
        android:id="@+id/UserDetails_EditText_Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/default_size"
        app:layout_constraintEnd_toEndOf="@+id/UserDetails_EditText_Email"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_Email"
        app:layout_constraintTop_toBottomOf="@+id/Fixed_UserDetails_TextView_Username" />

    <EditText
        android:id="@+id/UserDetails_EditText_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/default_size"
        app:layout_constraintEnd_toEndOf="@+id/UserDetails_EditText_Password"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_Password"
        app:layout_constraintTop_toBottomOf="@+id/Fixed_UserDetails_TextView_Email" />

    <EditText
        android:id="@+id/UserDetails_EditText_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/default_size"
        app:layout_constraintEnd_toEndOf="@+id/UserDetails_EditText_ConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_EditText_ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/Fixed_UserDetails_TextView_Password" />

    <EditText
        android:id="@+id/UserDetails_EditText_ConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="@dimen/default_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fixed_UserDetails_TextView_ConfirmPassword" />

    <Button
        android:id="@+id/UserDetails_Button_Continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/continue_btn"
        android:textSize="@dimen/default_size"
        app:backgroundTint="#9CDD34"
        app:layout_constraintBottom_toTopOf="@+id/UserDetails_Button_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UserDetails_Button_Cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@android:string/cancel"
        android:textSize="@dimen/default_size"
        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/UserDetails_Button_Continue"
        app:layout_constraintStart_toStartOf="@+id/UserDetails_Button_Continue" />

</androidx.constraintlayout.widget.ConstraintLayout>